RESOLVED FIXED115843
[BLACKBERRY]fix regression in Webpage
https://bugs.webkit.org/show_bug.cgi?id=115843
Summary [BLACKBERRY]fix regression in Webpage
xuefeiren
Reported 2013-05-08 20:00:27 PDT
fix regression StartDownload in FrameLoaderClientBlackBerry
Attachments
Fix regression in WebPage and FrameLoaderClientBlackberry (3.42 KB, patch)
2013-05-08 20:11 PDT, xuefeiren
mawu: review-
mawu: commit-queue-
Fix regression in WebPage and FrameLoaderClientBlackberry (3.47 KB, patch)
2013-05-08 20:41 PDT, xuefeiren
no flags
xuefeiren
Comment 1 2013-05-08 20:11:57 PDT
Created attachment 201130 [details] Fix regression in WebPage and FrameLoaderClientBlackberry Fix regression in WebPage and FrameLoaderClientBlackberry
Mary Wu
Comment 2 2013-05-08 20:16:42 PDT
Comment on attachment 201130 [details] Fix regression in WebPage and FrameLoaderClientBlackberry View in context: https://bugs.webkit.org/attachment.cgi?id=201130&action=review > Source/WebKit/blackberry/ChangeLog:5 > + Reviewed by Mary Wu. don't put here, it's internally review > Source/WebKit/blackberry/WebCoreSupport/FrameLoaderClientBlackBerry.cpp:1192 > + requestCopy.setTargetType(BlackBerry::Platform::NetworkRequest::TargetIsDownload);/*forceDownload=true*/ obvious mistake, you use NetworkRequest to initiate ResourceRequest?
xuefeiren
Comment 3 2013-05-08 20:41:14 PDT
Created attachment 201131 [details] Fix regression in WebPage and FrameLoaderClientBlackberry Fix regression in WebPage and FrameLoaderClientBlackberry
Mary Wu
Comment 4 2013-05-08 23:13:51 PDT
(In reply to comment #3) > Created an attachment (id=201131) [details] > Fix regression in WebPage and FrameLoaderClientBlackberry > > Fix regression in WebPage and FrameLoaderClientBlackberry ok
Benjamin Poulain
Comment 5 2013-05-09 01:54:44 PDT
Please do not r- patches if you are not a reviewer.
Rob Buis
Comment 6 2013-05-09 08:11:49 PDT
Comment on attachment 201131 [details] Fix regression in WebPage and FrameLoaderClientBlackberry Ok.
WebKit Commit Bot
Comment 7 2013-05-09 08:41:28 PDT
Comment on attachment 201131 [details] Fix regression in WebPage and FrameLoaderClientBlackberry Clearing flags on attachment: 201131 Committed r149810: <http://trac.webkit.org/changeset/149810>
WebKit Commit Bot
Comment 8 2013-05-09 08:41:30 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.