[BLACKBERRY]fix regression in Webpage and FrameLoaderClientBlackberry https://bugs.webkit.org/show_bug.cgi?id=115843

Patch by Xuefei Ren <xren@blackberry.com> on 2013-05-09
Reviewed by Rob Buis.

Internally reviewed by Mary Wu.

* Api/WebPage.cpp:
(BlackBerry::WebKit::WebPage::loadFile):
* WebCoreSupport/FrameLoaderClientBlackBerry.cpp:
(WebCore::FrameLoaderClientBlackBerry::startDownload):

Canonical link: https://commits.webkit.org/134270@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@149810 268f45cc-cd09-0410-ab3c-d52691b4dbfc